--- a/.github/workflows/.deploy.yml
+++ b/.github/workflows/.deploy.yml
@@ -10,7 +10,7 @@ jobs:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout Repo
-        uses: actions/checkout@main
+        uses: actions/checkout@v2
       - name: Create Node Environment
         uses: actions/setup-node@v1
         with:
