--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -5,6 +5,10 @@ on:
       - main
 
 jobs:
+  build:
+    name: Deploy Application
+    runs-on: ubuntu-latest
+
   deploy:
     name: Deploy Application
     runs-on: ubuntu-latest
@@ -26,4 +30,4 @@ jobs:
           REPO: self
           BRANCH: main
           FOLDER: dist
-          GITHUB_TOKEN: ${{ secrets.GITHU
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN}}
