--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     },
     "dependencies": {
         "core-js": "^3.6.5",
+        "vee-validate": "^3.4.13",
         "vue": "^2.6.11",
         "vue-easy-lightbox": "^0.16.2",
         "vue-router": "^3.2.0",
+        "vue-toasted": "^1.1.28",
         "vue-typer": "^1.2.0",
+        "vue2-toast": "^2.1.0",
         "vuetify": "^2.4.0"
     },
     "devDependencies": {
