--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "sitemap": "vue-cli-service sitemap"
   },
   "dependencies": {
+    "@fortawesome/fontawesome-free": "^6.1.1",
+    "bottom-navigation-vue": "^2.5.0",
     "core-js": "^3.6.5",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
