--- a/package.json
+++ b/package.json
@@ -10,12 +10,16 @@
   },
   "dependencies": {
     "@fortawesome/fontawesome-free": "^6.1.1",
+    "axios": "^0.27.2",
     "bottom-navigation-vue": "^2.5.0",
     "core-js": "^3.6.5",
+    "sweet-alert-vuetify": "^1.3.0",
+    "sweetalert2": "^11.4.17",
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
     "vue-easy-lightbox": "^0.16.2",
     "vue-router": "^3.2.0",
+    "vue-sweetalert2": "^5.0.5",
     "vue-toasted": "^1.1.28",
     "vue-typer": "^1.2.0",
     "vue2-toast": "^2.1.0",
