--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,7 +5,8 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.html [L]
-  RewriteEngine On
 RewriteCond %{HTTP_HOST} ^www.anilkumarthakur.com.np/ [NC]
 RewriteRule ^(.*)$ https://anilkumarthakur.com.np//$1 [L,R=301]
+RewriteCond %{HTTPS} on
+RewriteRule (.*) http://%{HTTP_HOST}%{REQUEST_URI} [R=301,L]
 </IfModule>
