--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,10 +5,13 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.html [L]
-  RewriteCond %{HTTP_HOST} !^www\. [NC]
-RewriteRule ^(.*)$ https://www.%{HTTP_HOST}/$1 [R=301,L]
+  RewriteEngine On 
 
-RewriteCond %{HTTP_HOST} ^www.anilkumarthakur.com.np [NC]
-RewriteRule ^(.*)$ https://anilkumarthakur.com.np/$1 [L,R=301]
+RewriteCond %{HTTPS} !=on
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [L,R=301]
+
+RewriteCond %{HTTP_HOST} !^www\.
+RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [L,R=301]
+
 
 </IfModule>
