--- a/public/.htaccess
+++ b/public/.htaccess
@@ -5,13 +5,11 @@
   RewriteCond %{REQUEST_FILENAME} !-f
   RewriteCond %{REQUEST_FILENAME} !-d
   RewriteRule . /index.html [L]
-  RewriteEngine On 
-
-RewriteCond %{HTTPS} !=on
-RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [L,R=301]
-
-RewriteCond %{HTTP_HOST} !^www\.
-RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [L,R=301]
 
 
-</IfModule>
+  RewriteCond %{HTTPS} !=on
+  RewriteRule ^(.*)$ https://%{HTTP_HOST}/$1 [L,R=301]
+  RewriteCond %{HTTP_HOST} ^www.anilkumarthakur.com.np [NC]
+  RewriteRule ^(.*)$ https://anilkumarthakur.com.np/$1 [L,R=301]
+
+  </IfModule>
