--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "vee-validate": "^3.4.13",
     "vue": "^2.6.11",
     "vue-easy-lightbox": "^0.16.2",
+    "vue-loader": "^17.0.1",
     "vue-router": "^3.2.0",
     "vue-sweetalert2": "^5.0.5",
     "vue-toasted": "^1.1.28",
