--- a/package.json
+++ b/package.json
@@ -35,12 +35,12 @@
     "babel-eslint": "^10.1.0",
     "eslint": "^8.56.0",
     "eslint-plugin-vue": "^9.19.2",
-    "sass": "~1.32.0",
-    "sass-loader": "^10.0.0",
-    "vue-cli-plugin-sitemap": "~2.3.0",
-    "vue-cli-plugin-vuetify": "~2.4.3",
-    "vue-template-compiler": "^2.6.11",
-    "vuetify-loader": "^1.7.0"
+    "sass": "^1.69.7",
+    "sass-loader": "^13.3.3",
+    "vue-cli-plugin-sitemap": "^2.3.0",
+    "vue-cli-plugin-vuetify": "^2.5.8",
+    "vue-template-compiler": "^2.7.16",
+    "vuetify-loader": "^1.9.2"
   },
   "eslintConfig": {
     "root": true,
